# MLVInspector

./: .gitignore  Cargo.toml  Dioxus.toml  MLVInspector.Worker.Tests.csproj  README.md  coverage.runsettings
.github/workflows/: ci.yml  release.yml  update-mlvscan-core.yml
MLVInspector.Worker/: AssemblyCache.cs  Dispatcher.cs  ILInspector.Worker.csproj  Program.cs  Protocol.cs  README.md  WorkerProtocol.cs
scripts/: run-coverage.ps1
src/: app.rs  error.rs  ipc.rs  main.rs  shortcuts.rs  state.rs  types.rs
src/components/: analysis.rs  assemblies_panel.rs  command_palette.rs  commands.rs  csharp_highlight.rs  explorer_assemblies.rs  explorer_metadata.rs  explorer_panel.rs  explorer_tools.rs  explorer_tree.rs  findings_panel.rs  helpers.rs  il_view_panel.rs  mod.rs  overlay.rs  resize.rs  settings_overlay.rs  status_bar.rs  theme.rs  title_bar.rs  title_bar_actions.rs  view_models.rs
src/services/: export_project.rs  inspector.rs  mod.rs  settings.rs  tool_paths.rs  worker_client.rs
tests/: AssemblyCacheTests.cs  DecompilerWebClientTests.cs  DispatcherTests.cs  ProtocolTests.cs  WorkerProtocolTests.cs
